Prevent a horizontal overflow on the body

--- a/css_defaults.scss
+++ b/css_defaults.scss
@@ -45,6 +45,10 @@ html {
     -webkit-font-smoothing: antialiased; /* [3] */
     -moz-osx-font-smoothing: grayscale; /* [3] */
   }
+  
+body {
+    overflow-x: hidden;
+}
 
 ul,
 ol {
